Add opensearch functions
