# charts/kubestash-catalog/values.openapiv3_schema.yaml
@@ -95,10 +95,22 @@ properties:
   opensearch:
     description: StashOpensearchSpec is the schema for Stash Opensearch values file
     properties:
+      backup:
+        properties:
+          args:
+            type: string
+        type: object
       enabled:
         type: boolean
+      restore:
+        properties:
+          args:
+            type: string
+        type: object
     required:
+    - backup
     - enabled
+    - restore
     type: object
   proxies:
     properties:
